--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -76,8 +76,14 @@
 /*----------------------------------------------------*/
 @import "home_2/blog";
 /*---------------------------------------------------- */
-
-
+/*Banner Section*/
+/*----------------------------------------------------*/
+@import "home_3/banner";
+/*---------------------------------------------------- */
+/*Service Section*/
+/*----------------------------------------------------*/
+@import "home_3/service";
+/*---------------------------------------------------- */
 
 /*Footer Section*/
 /*----------------------------------------------------*/
