--- a/assets/scss/home_1/_about.scss
+++ b/assets/scss/home_1/_about.scss
@@ -86,4 +86,18 @@
 			margin-bottom: 0;
 		}
 	}
+	&.ver_2 {
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: 0 auto;
+		padding: 40px 15px;
+		position: absolute;
+		border-radius: 24px;
+		backdrop-filter: blur(5px);
+		background-color: rgba(255, 255, 255, 0.88);
+		@media #{$xs} {
+			position: static;
+		}
+	}
 }
