--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -11,6 +11,10 @@
 			bottom: 0;
 			opacity: .20;
 		}
+		&.ver_2 {
+			margin-top: -40px;
+			background-color: #1C255C;
+		}
 	}
 }
 .vt-footer-content {
