--- a/assets/scss/home_1/_contact.scss
+++ b/assets/scss/home_1/_contact.scss
@@ -28,6 +28,9 @@
 			background-color: #fff;
 		}
 	}
+	&.section_border_radius {
+		margin-top: -40px;
+	}
 }
 .vt-contact-content {
 	gap: 40px 75px;
