--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -84,6 +84,11 @@
 /*----------------------------------------------------*/
 @import "home_3/service";
 /*---------------------------------------------------- */
+/*Get In Touch Section*/
+/*----------------------------------------------------*/
+@import "home_3/get-in-touch";
+/*---------------------------------------------------- */
+
 
 /*Footer Section*/
 /*----------------------------------------------------*/
