--- a/assets/scss/home_1/_blog.scss
+++ b/assets/scss/home_1/_blog.scss
@@ -14,6 +14,18 @@
 	margin-bottom: 30px;
 	.item-img {
 		margin-bottom: 24px;
+		.img_shape {
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				mix-blend-mode: overlay;
+			}
+		}
 	}
 	.item-tag {
 		margin-bottom: 18px;
