--- a/assets/scss/home_1/_faq.scss
+++ b/assets/scss/home_1/_faq.scss
@@ -3,6 +3,10 @@
 		margin: 0 auto;
 		max-width: 630px;
 	}
+	&.section_border_radius {
+		z-index: 2;
+		background-color: #fff;
+	}
 }
 .vt-faq-item-area {
 	margin: 0 auto;
@@ -79,7 +83,7 @@
 		font-family: 'Font Awesome 5 Pro';
 	}
 }
-.vt-faq-bottom {
+.vt-faq-bottom { 
 	p {
 		font-size: 23px;
 		font-family: var(--vt-heading);
