--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,10 @@ Font load
   font-family: var(--vt-heading);
   background-color: var(--vt-title-color);
 }
+.vt-header-section.header_style_one .header-cta-btn a:hover {
+  color: #fff;
+  background-color: #3533FF;
+}
 .vt-header-section.header_style_one .canvas-trigger {
   margin-left: 20px;
 }
@@ -789,20 +793,64 @@ select:visited {
   z-index: 1;
 }
 
+@-webkit-keyframes vt-spin {
+  50% {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
+
+@keyframes vt-spin {
+  50% {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+}
 .vt-btn a {
+  z-index: 1;
   color: #C9F7CA;
   font-weight: 500;
   font-size: 16px;
   padding: 15px 25px;
   letter-spacing: 1px;
+  white-space: nowrap;
+  position: relative;
   display: inline-block;
   font-family: Test_Söhne_500;
   background-color: var(--vt-title-color);
+}
+.vt-btn a:before {
+  top: auto;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  width: 100%;
+  height: 0%;
+  content: "";
+  position: absolute;
+  background-color: #3533FF;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 @media (max-width: 480px) {
   .vt-btn a {
     padding: 14px 18px;
   }
+}
+.vt-btn a span {
+  display: inline-block;
+  pointer-events: none;
+}
+.vt-btn a span.vt-spin {
+  -webkit-animation: vt-spin 0.5s 1;
+  animation: vt-spin 0.5s 1;
+  -webkit-transform-origin: bottom;
+  transform-origin: bottom;
+}
+.vt-btn a:hover:before {
+  top: 0;
+  bottom: 0;
+  height: 100%;
 }
 .vt-btn.ver_2 a {
   color: var(--vt-title-color);
@@ -2382,6 +2430,7 @@ select:visited {
 .vt-banner-text .banner_title {
   line-height: 1;
   font-size: 64px;
+  overflow: hidden;
   letter-spacing: -2px;
   color: var(--vt-title-color);
 }
