--- a/assets/scss/_predefine.scss
+++ b/assets/scss/_predefine.scss
@@ -260,18 +260,60 @@ select:visited {
 	padding: 0;
 	z-index: 1;
 }
+@keyframes vt-spin {
+	50% {
+        -webkit-transform: scaleY(0);
+        transform: scaleY(0)
+    }
+}
 .vt-btn {
 	a {
+		z-index: 1;
 		color: #C9F7CA;
 		font-weight: 500;
 		font-size: 	16px;
 		padding: 15px 25px;
 		letter-spacing: 1px;
+		white-space: nowrap;
+		position: relative;
 		display: inline-block;
 		font-family: Test_Söhne_500;
 		background-color: var(--vt-title-color);
+		&:before {
+			top: auto;
+			left: 0;
+			bottom: 0;
+			z-index: -1;
+			width: 100%;
+			height: 0%;
+			content: '';
+			position: absolute;
+			background-color: #3533FF;
+			transition: all 500ms ease;
+		}
 		@media #{$xxs} {
 			padding: 14px 18px;
+		}
+		span {
+			display: inline-block;
+			pointer-events: none;
+			&.vt-spin {
+				-webkit-animation: vt-spin .5s 1;
+				-khtml-animation: vt-spin .5s 1;
+				-moz-animation: vt-spin .5s 1;
+				-ms-animation: vt-spin .5s 1;
+				-o-animation: vt-spin .5s 1;
+				animation: vt-spin .5s 1;
+				-webkit-transform-origin: bottom;
+				transform-origin: bottom
+			}
+		}
+		&:hover {
+			&:before {
+				top: 0;
+				bottom: 0;
+				height: 100%;
+			}
 		}
 	}
 	&.ver_2 {
