--- a/assets/scss/home_1/_banner.scss
+++ b/assets/scss/home_1/_banner.scss
@@ -8,12 +8,19 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+			transform: scale(1.5);
 		}
 	}
 	.vt-banner-shape {
 		right: 0;
 		bottom: 0px;
 		position: absolute;
+		svg {
+			path {
+				clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+				transition: all 1500ms ease;
+			}
+		}
 		@media #{$sm,$xs} {
 			display: none;
 		}
@@ -35,6 +42,44 @@
 			background: linear-gradient(180deg, #101010 0%, rgba(16, 16, 16, 0) 100%);
 		}
 	}
+	&.active {
+		.vt-banner-shape  {
+			svg {
+				path {
+					clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+					&:nth-child(1) {
+						transition-delay: 500ms;
+					}
+					&:nth-child(2) {
+						transition-delay: 700ms;
+					}
+					&:nth-child(3) {
+						transition-delay: 900ms;
+					}
+					&:nth-child(4) {
+						transition-delay: 1100ms;
+					}
+					&:nth-child(5) {
+						transition-delay: 1300ms;
+					}
+
+					&:nth-child(6) {
+						transition-delay: 1500ms;
+					}
+				}
+			}
+		}
+		.banner-slug {
+			transition-delay: 500ms;
+			clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+		}
+		.bt-banner-img {
+			img {
+				transform: scale(1);
+				transition: all 3500ms ease;
+			}
+		}
+	}
 }
 .vt-banner-text {
 	z-index: 1;
@@ -53,6 +98,8 @@
 		position: relative;
 		margin-bottom: 16px;
 		display: inline-block;
+		transition: all 1000ms ease;
+		clip-path: polygon(53% 0, 53% 0, 53% 100%, 53% 100%);
 		background: linear-gradient(90deg, #DBF0FF 0%, #DFE2FF 50%, #F6DFFF 100%);
 		&:before,
 		&:after {
@@ -72,7 +119,7 @@
 		}
 	}
 	.banner_title {
-		line-height: 1;
+		line-height: 1.15;
 		font-size: 	64px;
 		overflow: hidden;
 		letter-spacing: -2px;
