--- a/assets/scss/home_1/_testimonial.scss
+++ b/assets/scss/home_1/_testimonial.scss
@@ -113,6 +113,10 @@
 		transform: translateY(-50%);
 		background-color: rgba(255, 255, 255, .48);
 		backdrop-filter: blur(5px);
+		transition: all 500ms ease;
+		&:hover {
+			background-color: #C9F7CA;
+		}
 	}
 	.vt-testi-prev {
 		left: 24px;
