--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -882,6 +882,10 @@ select:visited {
   background-color: transparent;
   border: 2px solid var(--vt-title-color);
 }
+.vt-btn.ver_2 a:hover {
+  color: #fff;
+  border: 2px solid #3533FF;
+}
 
 .vt-section-title .subtitle {
   line-height: 1;
@@ -911,7 +915,7 @@ select:visited {
 .vt-section-title .section_title {
   font-size: 45px;
   font-weight: 500;
-  line-height: 1.0666;
+  line-height: 1.15;
   letter-spacing: -2px;
   color: var(--vt-title-color);
 }
@@ -992,13 +996,23 @@ select:visited {
   width: 100%;
   height: 4px;
   display: block;
+  height: 33.33%;
   margin-bottom: 8px;
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 .vt-vertical-shape-2 span:nth-child(2) {
-  height: 8px;
+  -webkit-transition-delay: 400ms;
+          transition-delay: 400ms;
 }
 .vt-vertical-shape-2 span:nth-child(3) {
-  height: 16px;
+  -webkit-transition-delay: 600ms;
+          transition-delay: 600ms;
+}
+.vt-vertical-shape-2.active span {
+  height: 0;
 }
 
 .section_border_radius {
@@ -2542,6 +2556,63 @@ select:visited {
 /*---------------------------------------------------- */
 /*Service Section*/
 /*----------------------------------------------------*/
+@-webkit-keyframes icon-bounce {
+  0%, 100%, 20%, 50%, 80% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+@keyframes icon-bounce {
+  0%, 100%, 20%, 50%, 80% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+@-webkit-keyframes SVGTX {
+  0% {
+    stroke-dashoffset: 2500;
+    fill: transparent;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    stroke-width: 1;
+    fill: #fff;
+  }
+}
+@keyframes SVGTX {
+  0% {
+    stroke-dashoffset: 2500;
+    fill: transparent;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    stroke-width: 1;
+    fill: #fff;
+  }
+}
+.vt-service-section {
+  overflow: hidden;
+}
+.vt-service-section .vt-service-shape {
+  top: -80px;
+  right: -80px;
+}
 .vt-service-section .vt-section-title {
   max-width: 696px;
 }
@@ -2554,6 +2625,8 @@ select:visited {
 }
 .vt-service-item .item-icon {
   margin-bottom: 30px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 .vt-service-item .item-text h3 {
   font-size: 23px;
@@ -2572,6 +2645,10 @@ select:visited {
 .vt-service-item.ver_3 {
   background: -webkit-gradient(linear, left top, left bottom, from(#CFE2FF), to(#A4A7FE));
   background: linear-gradient(180deg, #CFE2FF 0%, #A4A7FE 100%);
+}
+.vt-service-item:hover .item-icon {
+  -webkit-animation: icon-bounce 1s ease-out infinite;
+          animation: icon-bounce 1s ease-out infinite;
 }
 
 .vt-service-section-2 {
@@ -2619,9 +2696,19 @@ select:visited {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+  -webkit-transition: all 1200ms ease;
+  transition: all 1200ms ease;
 }
 .vt-service-item-2 .item-text .vt-section-title {
   max-width: 495px;
+}
+.vt-service-item-2 .item-text .vt-section-title .subtitle {
+  opacity: 0;
+  margin-left: 50px;
+  -webkit-transition: all 700ms ease;
+  transition: all 700ms ease;
 }
 .vt-service-item-2 .item-text .vt-section-title .section_title {
   font-size: 64px;
@@ -2630,6 +2717,25 @@ select:visited {
   .vt-service-item-2 .item-text .vt-section-title .section_title {
     font-size: 45px;
   }
+}
+.vt-service-item-2 .item-text .vt-section-title .section_title .split-line div {
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: all 700ms ease;
+  transition: all 700ms ease;
+}
+
+.swiper-slide-active .vt-service-item-2 .item-img img {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.swiper-slide-active .vt-service-item-2 .item-text .vt-section-title .subtitle {
+  opacity: 1;
+  margin-left: 0;
+}
+.swiper-slide-active .vt-service-item-2 .item-text .vt-section-title .section_title .split-line div {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .vt-service-thumb {
@@ -2820,6 +2926,7 @@ select:visited {
   width: 100%;
   height: 100%;
   max-width: 720px;
+  overflow: hidden;
   max-height: 920px;
 }
 .vt-service-content .vt-service-bg .vt-vertical-shape-2 {
@@ -2833,19 +2940,36 @@ select:visited {
 }
 .vt-service-content .vt-service-bg .vt-vertical-shape-2 span {
   width: 6px;
-  height: 100%;
+  height: 0%;
   margin-bottom: 0;
   margin-right: 6px;
   background-color: #fff;
+  -webkit-transition: all 1000ms ease;
+  transition: all 1000ms ease;
 }
 .vt-service-content .vt-service-bg .vt-vertical-shape-2 span:nth-child(2) {
   width: 6px;
-  height: 100%;
+  height: 0%;
   margin-right: 10px;
 }
 .vt-service-content .vt-service-bg .vt-vertical-shape-2 span:nth-child(3) {
   width: 6px;
+  height: 0%;
+}
+.vt-service-content .vt-service-bg.active .vt-vertical-shape-2 span {
   height: 100%;
+  -webkit-transition-delay: 1000ms;
+          transition-delay: 1000ms;
+}
+.vt-service-content .vt-service-bg.active .vt-vertical-shape-2 span:nth-child(2) {
+  height: 100%;
+  -webkit-transition-delay: 1200ms;
+          transition-delay: 1200ms;
+}
+.vt-service-content .vt-service-bg.active .vt-vertical-shape-2 span:nth-child(3) {
+  height: 100%;
+  -webkit-transition-delay: 1300ms;
+          transition-delay: 1300ms;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .vt-service-content .vt-service-bg {
@@ -2958,6 +3082,10 @@ select:visited {
 .vt-service-item-3 .item-icon {
   margin-bottom: 38px;
 }
+.vt-service-item-3 .item-icon svg path {
+  stroke-dasharray: 2500;
+  stroke-dashoffset: 0;
+}
 .vt-service-item-3 .item-text .ser_title {
   font-size: 23px;
   font-weight: 500;
@@ -2968,6 +3096,10 @@ select:visited {
 .vt-service-item-3 .item-text p {
   color: #5D5D5D;
   font-size: 18px;
+}
+.vt-service-item-3:hover .item-icon svg path {
+  -webkit-animation: SVGTX 8s ease;
+          animation: SVGTX 8s ease;
 }
 
 /*---------------------------------------------------- */
@@ -3010,17 +3142,26 @@ select:visited {
 }
 .vt-about-counter:before {
   top: 0;
+  bottom: 0;
   left: -40px;
   width: 2px;
   content: "";
-  height: 100%;
+  height: 0;
+  margin: auto 0;
   position: absolute;
   background-color: #C9F7CA;
+  -webkit-transition: all 900ms ease;
+  transition: all 900ms ease;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
   .vt-about-counter:before {
     display: none;
   }
+}
+.vt-about-counter.active:before {
+  height: 100%;
+  -webkit-transition-delay: 1800ms;
+          transition-delay: 1800ms;
 }
 
 .vt-counter-item {
@@ -3371,6 +3512,11 @@ select:visited {
   background-color: rgba(255, 255, 255, 0.48);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  transition: all 500ms ease;
+}
+.vt-testi-slider-nav .vt-testi-prev:hover,
+.vt-testi-slider-nav .vt-testi-next:hover {
+  background-color: #C9F7CA;
 }
 .vt-testi-slider-nav .vt-testi-prev {
   left: 24px;
