--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3579,19 +3579,36 @@ select:visited {
 }
 .vt-why-choose-img .vt-vertical-shape-2 span {
   width: 6px;
-  height: 100%;
+  height: 0%;
   margin-bottom: 0;
   margin-right: 6px;
   background-color: #fff;
+  -webkit-transition: all 700ms ease;
+  transition: all 700ms ease;
 }
 .vt-why-choose-img .vt-vertical-shape-2 span:nth-child(2) {
   width: 6px;
-  height: 100%;
+  height: 0%;
   margin-right: 10px;
 }
 .vt-why-choose-img .vt-vertical-shape-2 span:nth-child(3) {
   width: 6px;
+  height: 0%;
+}
+.vt-why-choose-img .vt-vertical-shape-2.active span {
   height: 100%;
+  -webkit-transition-delay: 1300ms;
+          transition-delay: 1300ms;
+}
+.vt-why-choose-img .vt-vertical-shape-2.active span:nth-child(2) {
+  height: 100%;
+  -webkit-transition-delay: 1500ms;
+          transition-delay: 1500ms;
+}
+.vt-why-choose-img .vt-vertical-shape-2.active span:nth-child(3) {
+  height: 100%;
+  -webkit-transition-delay: 1800ms;
+          transition-delay: 1800ms;
 }
 
 .vt-why-choose-text {
@@ -3634,6 +3651,10 @@ select:visited {
 .vt-why-choose-ft-item:last-child {
   margin-bottom: 0;
 }
+.vt-why-choose-ft-item .item-icon svg path {
+  stroke-dasharray: 2500;
+  stroke-dashoffset: 0;
+}
 .vt-why-choose-ft-item .item-text {
   max-width: 470px;
 }
@@ -3651,6 +3672,10 @@ select:visited {
 .vt-why-choose-ft-item .item-text p {
   color: #454545;
   font-size: 18px;
+}
+.vt-why-choose-ft-item:hover .item-icon svg path {
+  -webkit-animation: SVGTX 8s ease;
+          animation: SVGTX 8s ease;
 }
 .vt-why-choose-ft-item.dark_version .item-text h3 {
   color: #fff;
@@ -3680,7 +3705,13 @@ select:visited {
   margin-bottom: 30px;
 }
 .vt-blog-item .item-img {
+  overflow: hidden;
   margin-bottom: 24px;
+  position: relative;
+}
+.vt-blog-item .item-img img {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 .vt-blog-item .item-img .img_shape {
   top: 0;
@@ -3694,6 +3725,20 @@ select:visited {
   -o-object-fit: cover;
      object-fit: cover;
   mix-blend-mode: overlay;
+}
+.vt-blog-item .item-img:before {
+  top: 50%;
+  bottom: 50%;
+  opacity: 1;
+  left: 0;
+  z-index: 1;
+  content: "";
+  right: 0;
+  position: absolute;
+  pointer-events: none;
+  -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
+  background: rgba(255, 255, 255, 0.4);
 }
 .vt-blog-item .item-tag {
   margin-bottom: 18px;
@@ -3715,6 +3760,17 @@ select:visited {
   font-weight: 500;
   font-size: 23px;
   line-height: 1.3;
+}
+.vt-blog-item:hover .item-img img {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+.vt-blog-item:hover .item-img:before {
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
 }
 .vt-blog-item.ver_2 .item-img-meta .item-tag {
   left: 8px;
